# mesima

./: Tiltfile  deployment.yaml  k3d.yaml  pyproject.toml  readme.md
.github/workflows/: integration.yml  push.yml
backend/: Dockerfile  pyproject.toml
backend/manager/manager/: asgi.py  settings.py  urls.py  wsgi.py
backend/manager/tasks/: models.py  serializers.py  views.py
backend/manager/tasks/migrations/: 0001_initial.py
backend/manager/tasks/tests/: test_people.py  test_tasks.py
manager/manager/: settings.py
manager/tasks/: models.py  serializers.py  views.py
manager/tasks/migrations/: 0001_initial.py
manager/tasks/tests/: test_people.py  test_tasks.py
